--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body,html {
     width: 80%;
     margin: auto;
     display: block;
-    border-bottom: 3px solid orange;
+    border-bottom: 3px solid #bd89f4;
     font-weight: bold;
 }
 
